# ivexes

./: .env.example  .gitignore  .pre-commit-config.yaml  404.html  DOCUMENTATION_PLAN.md  Makefile  README.md  browse_sessions.py  docker-compose.yaml  github_scan.sqlite  github_scraper.py  index.html  main.py  manual.py  maskfile.md  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sandbox.ipynb  sitemap.xml  stats.csv  testdata.py  todo.md  validate-htb-challenges.py
.github/workflows/: check-requirements.yaml  docs.yaml  docs.yml  integration.yaml  test-lint.yaml
agents/: index.html
api/agents/: index.html
api/code_browser/: index.html
api/config/: index.html
api/cve_search/: index.html
api/sandbox/: index.html
api/tools/: index.html
api/vector_db/: index.html
code_browser/: index.html
config/: index.html  log.py  run.py  settings.py
container/: utils.py
container/kali_sandbox/: Dockerfile
container/nvim_lsp/: Dockerfile
cve_search/: index.html
docs/: agents.md  code_browser.md  config.md  cve_search.md  index.md  quickstart.md  sandbox.md  tasks.md  tools.md  vector_db.md
docs/api/: agents.md  code-browser.md  code_browser.md  config.md  container.md  cve_search.md  exceptions.md  index.md  printer.md  prompts.md  report.md  sandbox.md  tools.md  vector-db.md  vector_db.md
docs/architecture/: components.md  index.md  overview.md  security.md
docs/contributing/: development.md  index.md  style.md  testing.md
docs/documentation/: architecture.md  configuration.md  development.md  examples.md  installation.md  usage.md
docs/examples/: ctf-challenges.md  index.md  sandbox-analysis.md  vulnerability-assessment.md
docs/getting-started/: configuration.md  index.md  installation.md  quickstart.md
docs/includes/: abbreviations.md
docs/javascripts/: extra.js
docs/scripts/: gen_ref_pages.py
docs/stylesheets/: extra.css
docs/user-guide/: agents.md  code-browser.md  cve-search.md  index.md  multi-agent.md  sandbox.md  single-agent.md  vector-db.md
documentation/architecture/: index.html
documentation/configuration/: index.html
documentation/development/: index.html
documentation/examples/: index.html
documentation/installation/: index.html
examples/: .env.example  10_agents_sandbox_spookypass.md  10_agents_sandbox_spookypass.py  11_agents_sandbox_behindthescenes.md  11_agents_sandbox_behindthescenes.py  12_agents_sandbox_checker.md  12_agents_sandbox_checker.py  20_mvp_screen.py  30_chroma_db_example.py  60_single_agent_enlightenment.py  60_single_agent_screen.py  70_multi_agent_screen.py  71_multi_agent_sudo.py  72_multi_agent_exiftool.py  manual.py
output/: eval-2.txt
quickstart/: index.html
sandbox/: index.html
search/: search_index.json
tests/: main.py  run_tests.py
thesis/: 10_agents_sandbox.py
tools/: __init__.py  database.py  export_traces.py  github_scraper.py  index.html  token_estimator.py  token_usage_analyzer.py  traces_fetcher.py  validate_htb_challenges.py
vector_db/: index.html
(+339 files in other folders)
