[project]
name = "ivexes"
version = "0.2.0"
description = "A Python package for automating vulnerability analysis and exploit generation"
readme = "README.md"
license = "GPL-3.0-or-later"
dependencies = [
  "dotenv",
  "pydantic",
  "pydantic_settings",
  "paramiko",
  "chromadb",
  "pynvim",
  "docker",
  "chardet",
  "openai",
  "openai-agents",
  "python-dotenv",
  "click",
  "tiktoken",
  "mitreattack-python",
  "nvdlib",
]

[dependency-groups]
dev = [
  "mkdocs>=1.6.1",
  "mkdocs-material>=9.6.15",
  "mkdocstrings[python]>=0.29.1",
  "pre-commit",
  "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.urls]
Repository = "https://github.com/LetsDrinkSomeTea/ivexes"

[tool.ruff]
extend-exclude = [".venv"]

[tool.ruff.format]
skip-magic-trailing-comma = false
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["D"]

[tool.ruff.lint.pydocstyle]
convention = "google"
